--- a/cliente/style.css
+++ b/cliente/style.css
@@ -4,5 +4,5 @@ body {
     font-family: 'Roboto', sans-serif;
     background-color: #f5f5f5;
     margin: 0;
-    padding: 0;
+    padding: 1rem;
 }
